plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.14'
}

repositories {
    mavenCentral()
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) // or 17, or 11
    }
}


javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'


}

test {
    useJUnitPlatform()
}

application {
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics', '-Djava.security.manager=allow']
    mainClass = 'runner.Main'
}



